--- a/pom.xml
+++ b/pom.xml
@@ -106,4 +106,6 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<name>de.unistuttgart.ims.commons</name>
+	<description>A collection of commonly used classes and functions.</description>
 </project>
